<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <TextView
        android:text="Today's Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/date"
        android:gravity="center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20dp"
        android:textColor="@color/abc_input_method_navigation_guard" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/calendarScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:overScrollMode="never"
        android:padding="0dp"
        android:scrollbars="none"
        android:fadingEdge="none"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/date">

        <RelativeLayout
            android:id="@+id/calendarRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp" >

            <LinearLayout
                android:id="@+id/calendarSplitterRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:padding="0dp"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/hoursRelativeLayout"
                    android:layout_width="33dp"
                    android:layout_height="1458dp"
                    android:gravity="left">

                    <TextView
                        android:id="@+id/time12amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:text="@string/time12am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time1amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="60dp"
                        android:gravity="center"
                        android:text="@string/time1am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time2amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="120dp"
                        android:gravity="center"
                        android:text="@string/time2am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time3amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="180dp"
                        android:gravity="center"
                        android:text="@string/time3am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time4amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="240dp"
                        android:gravity="center"
                        android:text="@string/time4am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time5amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="300dp"
                        android:gravity="center"
                        android:text="@string/time5am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time6amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="360dp"
                        android:gravity="center"
                        android:text="@string/time6am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time7amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="420dp"
                        android:gravity="center"
                        android:text="@string/time7am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time8amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="480dp"
                        android:gravity="center"
                        android:text="@string/time8am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time9amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="540dp"
                        android:gravity="center"
                        android:text="@string/time9am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time10amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="600dp"
                        android:gravity="center"
                        android:text="@string/time10am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time11amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="660dp"
                        android:gravity="center"
                        android:text="@string/time11am"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time12pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="720dp"
                        android:gravity="center"
                        android:text="@string/time12pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time1pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="780dp"
                        android:gravity="center"
                        android:text="@string/time1pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time2pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="840dp"
                        android:gravity="center"
                        android:text="@string/time2pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time3pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="900dp"
                        android:gravity="center"
                        android:text="@string/time3pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time4pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="960dp"
                        android:gravity="center"
                        android:text="@string/time4pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time5pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="1020dp"
                        android:gravity="center"
                        android:text="@string/time5pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time6pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="1080dp"
                        android:gravity="center"
                        android:text="@string/time6pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time7pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="1140dp"
                        android:gravity="center"
                        android:text="@string/time7pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time8pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="1200dp"
                        android:gravity="center"
                        android:text="@string/time8pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time9pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="1260dp"
                        android:gravity="center"
                        android:text="@string/time9pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time10pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="1320dp"
                        android:gravity="center"
                        android:text="@string/time10pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time11pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="1380dp"
                        android:gravity="center"
                        android:text="@string/time11pm"
                        android:textSize="9dp" />

                    <TextView
                        android:id="@+id/time12amTextViewBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="1440dp"
                        android:gravity="center|top"
                        android:text="@string/time12am"
                        android:textSize="9dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/schedule"
                    android:layout_width="match_parent"
                    android:layout_height="1454dp">
                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>